--- a/src/Kontext.Docu.Web.Portals/Resources/ContextProjectSharedResource.zh.resx
+++ b/src/Kontext.Docu.Web.Portals/Resources/ContextProjectSharedResource.zh.resx
@@ -921,7 +921,7 @@
   <data name="Contacts" xml:space="preserve">
     <value>联系方式</value>
   </data>
-  <data name="Hottest posts" xml:space="preserve">
+  <data name="Most-viewed posts" xml:space="preserve">
     <value>热门文章</value>
   </data>
   <data name="In this page" xml:space="preserve">
