--- a/src/Kontext.Docu.Web.Portals/Resources/ContextProjectSharedResource.resx
+++ b/src/Kontext.Docu.Web.Portals/Resources/ContextProjectSharedResource.resx
@@ -268,6 +268,6 @@
     <value>views</value>
   </data>
   <data name="Captcha" xml:space="preserve">
-    <value>Captcha (Solve the equation)</value>
+    <value>Captcha</value>
   </data>
 </root>
